--- a/2-rwd-2/css/style.css
+++ b/2-rwd-2/css/style.css
@@ -9,17 +9,17 @@ body {
 
 
 header {
-    background-image: url(../css/obrazy/man-1.jpg);
+    background-image: url(../obrazy/man-2.jpg);
     background-size: auto;
-    height: 1128px;
+    height: 1066px;
     position: relative;
 }
 
 div {
-    text-align: left;
-    transform: translateY(50%);
-    top: 50%;
+    text-align: right;
     width: 100%;
+    top: 30px;
+    right: 60px;
     font-size: 100%;
     position: absolute;
     color: white;
